# du-scraper

./: .gitignore  .pylintrc  Dockerfile  README.md  a.html  b.html  c.html  c.js  d.html  docker-compose.yaml  move_tmp_file.py  pyproject.toml  run.sh
data/: a.html
data/adopt/: page.html  page.json  product.html  t.py
data/exported/: Zara.json  marionnaud.json  nocibe.json  printemps.json
data/galerieslafayette/: page.json  product.json
data/marionnaud/: page.json  product.json
data/printemps/: page.html  page.json  product.json
data/sample/: data.json
data/sephora/: page.html  product.html
data/sommelier/: pages.json  product.json
data/zara/: cate.json  page.json  products.json
src/: main.py  sample.json
src/core/file/: cloud_handler.py  file_handler.py
src/core/otp/: minotp.py  otp_generator.py
src/core/scraper/: adopt.py  base.py  lafayette.py  marionnaud.py  models.py  nocibe.py  printemps.py  sommelier.py  typed.py  zara.py
src/core/typed/: base.py  lafayette.py  marionnaud.py  printemps.py  zara.py
src/core/utils/: airflowy.py  azury.py  constant.py  driver.py  helper.py  money.py  types.py
src/scraper/: adopt.py  beauty.py  beauty_fe.py  beauty_ma.py  harrods.py  lafayette.py  marionnaud.py  my_origines.py  nocibe.py  printemps.py  product.py  sommelier.py  zara.py
tests/core/: t.py
